--- a/cnn.ipynb
+++ b/cnn.ipynb
@@ -6,7 +6,7 @@
       "name": "cnn.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOikqK9kSkVvTyagZUrn3Bi",
+      "authorship_tag": "ABX9TyNWINe6hx3nKy8hlJRT/1pW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -127,10 +127,34 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "test_datagen = ImageDataGenerator(rescale = 1.0/255)\n",
+        "test_set = test_datagen.flow_from_directory('dataset/test_set',\n",
+        "                                            target_size = (64, 64),\n",
+        "                                            batch_size = 32,\n",
+        "                                            class_mode = 'binary')"
       ],
       "metadata": {
         "id": "fdaFV-JQfv9q"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Building CNN"
+      ],
+      "metadata": {
+        "id": "A6URUXhghukq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "fsPeV_0Qhz-e"
       },
       "execution_count": null,
       "outputs": []
