--- a/cnn.ipynb
+++ b/cnn.ipynb
@@ -6,7 +6,7 @@
       "name": "cnn.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNWINe6hx3nKy8hlJRT/1pW",
+      "authorship_tag": "ABX9TyM8LA+EDrnE6U0zoXMjvlBH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
       "metadata": {
         "id": "-t6hL2c3cNtf"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -60,9 +60,9 @@
           "height": 35
         },
         "id": "YpakVNvAcrMc",
-        "outputId": "13c2b3ad-6d5a-4831-be0f-db9286bbdf45"
+        "outputId": "783113bc-a4f3-4c81-ebaf-f5c8be052bc5"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -75,7 +75,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 3
         }
       ]
     },
@@ -149,12 +149,171 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Initializing CNN"
+      ],
+      "metadata": {
+        "id": "UXxoiT6grCIt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cnn = tf.keras.models.Sequential()"
+      ],
+      "metadata": {
+        "id": "fsPeV_0Qhz-e"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Step 1 - Convolution"
+      ],
+      "metadata": {
+        "id": "lC6eKZHlrW3L"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cnn.add(tf.keras.layers.Conv2D(filters = 32,\n",
+        "                               kernel_size = 3,\n",
+        "                               activation = 'relu',\n",
+        "                               input_shape = [64, 64, 3]))"
+      ],
+      "metadata": {
+        "id": "EK3wbMPlrck-"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Step 2 - Pooling"
+      ],
+      "metadata": {
+        "id": "0wEcdLySwlkw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cnn.add(tf.keras.layers.MaxPool2D(pool_size = 2,\n",
+        "                                  strides = 2))"
+      ],
+      "metadata": {
+        "id": "1MpktrDgwohP"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Add second convolutional layer"
+      ],
+      "metadata": {
+        "id": "wWgRrfOexHw2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cnn.add(tf.keras.layers.Conv2D(filters = 32,\n",
+        "                               kernel_size = 3,\n",
+        "                               activation = 'relu'))\n",
+        "cnn.add(tf.keras.layers.MaxPool2D(pool_size = 2,\n",
+        "                                  strides = 2))"
+      ],
+      "metadata": {
+        "id": "BpXYQ_qmxOI_"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Step 3 - Flattening"
+      ],
+      "metadata": {
+        "id": "Pf77Dlk1xkj9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cnn.add(tf.keras.layers.Flatten())"
+      ],
+      "metadata": {
+        "id": "1-R6Ubplx-5C"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Step 4 - Full Connection"
+      ],
+      "metadata": {
+        "id": "dKRYFUXIybH0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cnn.add(tf.keras.layers.Dense(units = 128,\n",
+        "                              activation = 'relu'))"
+      ],
+      "metadata": {
+        "id": "gja4bibRyfh6"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Step 5 - Output layer"
+      ],
+      "metadata": {
+        "id": "xwaB5KKIyy7E"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cnn.add(tf.keras.layers.Dense(units = 1,\n",
+        "                              activation = 'sigmoid'))"
+      ],
+      "metadata": {
+        "id": "uicbGu2Ey2kz"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Training CNN"
+      ],
+      "metadata": {
+        "id": "lI3s7h8ZzJ-c"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         ""
       ],
       "metadata": {
-        "id": "fsPeV_0Qhz-e"
+        "id": "vmxMijntzLyo"
       },
       "execution_count": null,
       "outputs": []
