--- a/cnn.ipynb
+++ b/cnn.ipynb
@@ -5,8 +5,9 @@
     "colab": {
       "name": "cnn.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM8LA+EDrnE6U0zoXMjvlBH",
+      "authorship_tag": "ABX9TyMFpVF0h71/Gu+HSUx69D44",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -301,7 +302,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Training CNN"
+        "# Compiling CNN"
       ],
       "metadata": {
         "id": "lI3s7h8ZzJ-c"
@@ -310,10 +311,61 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "cnn.compile(optimizer = 'adam',\n",
+        "            loss = 'binary_crossentropy',\n",
+        "            metrics = ['accuracy'])"
       ],
       "metadata": {
         "id": "vmxMijntzLyo"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Training CNN"
+      ],
+      "metadata": {
+        "id": "PFXHzqrW9-eM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cnn.fit(x = training_set, validation_data = test_set, epochs = 25)"
+      ],
+      "metadata": {
+        "id": "auXqdxMa-BFh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Predict"
+      ],
+      "metadata": {
+        "id": "m6aTaTCQA4rq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "from keras.preprocessing import image\n",
+        "\n",
+        "test_image = image.load_img('dataset/single_prediction/cat_or_dog_1.jpg', target_size = (64, 64))\n",
+        "test_image = test_image.img_to_array(test_image)\n",
+        "test_image = np.expand_dims(test_image, axis = 0)\n",
+        "\n",
+        "result = cnn.predict(test_image)\n",
+        "\n",
+        "training_set.class_indices"
+      ],
+      "metadata": {
+        "id": "K_bOA_61A7uF"
       },
       "execution_count": null,
       "outputs": []
