--- a/cnn.ipynb
+++ b/cnn.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMFpVF0h71/Gu+HSUx69D44",
+      "authorship_tag": "ABX9TyO02GZeTFnp/zKUAvC+Y35j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -354,18 +354,34 @@
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
-        "from keras.preprocessing import image\n",
+        "from tensorflow.keras.preprocessing import image\n",
         "\n",
         "test_image = image.load_img('dataset/single_prediction/cat_or_dog_1.jpg', target_size = (64, 64))\n",
-        "test_image = test_image.img_to_array(test_image)\n",
+        "test_image = image.img_to_array(test_image)\n",
         "test_image = np.expand_dims(test_image, axis = 0)\n",
         "\n",
         "result = cnn.predict(test_image)\n",
         "\n",
-        "training_set.class_indices"
+        "training_set.class_indices\n",
+        "\n",
+        "if result[0][0] == 1:\n",
+        "  prediction = 'dog'\n",
+        "else:\n",
+        "  prediction = 'cat'"
       ],
       "metadata": {
         "id": "K_bOA_61A7uF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(prediction)"
+      ],
+      "metadata": {
+        "id": "YPV94TFZt67s"
       },
       "execution_count": null,
       "outputs": []
